compiler-core/src/parse/snapshots/gleam_core__parse__tests__const_invalid_record_constructor.snap
---
source: compiler-core/src/parse/tests.rs
expression: "\ntype A {\n    A(String, Int)\n}\nconst a = A(\"a\", let)\n"
---
error: Syntax error
  ┌─ /src/parse/error.gleam:5:18
  │
5 │ const a = A("a", let)
  │                  ^^^ I was not expecting this

Expected one of: 
")"
a constant record argument
